initial fork and header modifications

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -14,50 +14,74 @@
   <![endif]-->
 </head>
 
-  <body>
+  <body class="container">
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+    <section>
+      <header>
+        <nav>
+          <a class="nav-item" href="#services">Services</a>
+          <a class="nav-item" href="#product">Product</a>
+          <a class="nav-item" href="#vision">Vision</a>
+          <a class="nav-item" href="#features">Features</a>
+          <a class="nav-item" href="#about">About</a>
+          <a class="nav-item" href="#contact">Contact</a>
+        </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </header>
+    </section>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+    <section>
 
-  Get Started
+      <h1 class="tagline">Innovation<BR /> On<BR /> Demand</h1>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+      <button>Get Started</button>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
 
+    <hr>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+    <h4>Features</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <h4>About</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
 
+  <section>
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </section>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+    <div class="col-4">
+      <h4>Services</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <div class="col-4">
+      <h4>Product</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+    <div class="col-4">
+      <h4>Vision</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
 
-  Copyright Great Idea! 2018
-  
+  <hr>
+
+  <section>
+    <footer>
+      Contact
+      123 Way 456 Street
+      Somewhere, USA
+      1 (888) 888-8888
+      sales@greatidea.io
+
+      Copyright Great Idea! 2018
+    </footer>
+  </section>
   </body>
 </html>
