--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -30,23 +30,35 @@
       </header>
     </section>
 
-    <section>
-
-      <h1 class="tagline">Innovation<BR /> On<BR /> Demand</h1>
-
-      <button>Get Started</button>
-
-      <img src="img/header-img.png" alt="Image of a code snippet.">
+    <section class="jumbotron">
+      <div class="col-6 center">
+        <div class="cta">
+          <h1 class="tagline">
+            Innovation<BR />
+            On<BR />
+            Demand
+          </h1>
+          <button>Get Started</button>
+        </div>
+      </div>
+      <div class="col-6 center">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
     </section>
 
     <hr>
 
   <section>
-    <h4>Features</h4>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <div class="col-6">
+      <h4>Features</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
 
-    <h4>About</h4>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <div class="col-6">
+      <h4>About</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
   </section>
 
   <section>
