--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -86,13 +86,24 @@
 
   <section>
     <footer>
-      Contact
-      123 Way 456 Street
-      Somewhere, USA
-      1 (888) 888-8888
-      sales@greatidea.io
+      <h4>Contact</h4>
 
-      Copyright Great Idea! 2018
+      <div class="contact-info">
+        <address>
+          123 Way 456 Street<br />
+          Somewhere, USA
+        </address>
+      </div>
+      <div class="contact-info">
+        <a href="tel:1(888)888-8888">1 (888) 888-8888</a>
+      </div>
+      <div class="contact-info">
+        <a class="email" href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+      </div>
+
+      <div class="center">
+        Copyright Great Idea! 2018
+      </div>
     </footer>
   </section>
   </body>
