animations, background images, and fixed nav bar

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -7,6 +7,7 @@
   <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cookie|Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -16,19 +17,20 @@
 
   <body class="container">
 
-    <section>
-      <header>
+
+    <header class="color-change-2x">
         <nav>
-          <a class="nav-item" href="#services">Services</a>
-          <a class="nav-item" href="#product">Product</a>
-          <a class="nav-item" href="#vision">Vision</a>
-          <a class="nav-item" href="#features">Features</a>
-          <a class="nav-item" href="#about">About</a>
-          <a class="nav-item" href="#contact">Contact</a>
+          <ul class="nav">
+            <li class="current"><a class="nav-item" href="#services">Services</a></li>
+            <li><a class="nav-item" href="#product">Product</a></li>
+            <li><a class="nav-item" href="#vision">Vision</a></li>
+            <li><a class="nav-item" href="#features">Features</a></li>
+            <li><a class="nav-item" href="#about">About</a></li>
+            <li><a class="nav-item" href="#contact">Contact</a></li>
+          </ul>
         </nav>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </header>
-    </section>
+        <img class="logo rotate-center" src="img/logo.png" alt="Great Idea! Company logo.">
+    </header>
 
     <section class="jumbotron">
       <div class="col-6 center">
@@ -38,11 +40,12 @@
             On<BR />
             Demand
           </h1>
-          <button>Get Started</button>
+          <button class='cta-button'>Get Started</button>
         </div>
       </div>
       <div class="col-6 center">
-        <img src="img/header-img.png" alt="Image of a code snippet.">
+        <div class="circle">
+        </div>
       </div>
     </section>
 
@@ -62,23 +65,24 @@
   </section>
 
   <section>
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    <div class="square">
+    </div>
   </section>
 
   <section>
     <div class="col-4">
       <h4>Services</h4>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="fancy">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
 
     <div class="col-4">
       <h4>Product</h4>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="fancy">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
 
     <div class="col-4">
       <h4>Vision</h4>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="fancy">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
   </section>
 
