--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -77,7 +77,7 @@
 
     <div class="col-4">
       <h4>Product</h4>
-        <p class="fancy">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="fancy">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendissed vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
 
     <div class="col-4">
