--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Cookie|Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <script type="text/javascript" src="http://livejs.com/live.js"></script>
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -21,7 +23,7 @@
     <header class="color-change-2x">
         <nav>
           <ul class="nav">
-            <li class="current"><a class="nav-item" href="#services">Services</a></li>
+            <li class="current"><a class="nav-item" href="#services">Serices</a></li>
             <li><a class="nav-item" href="#product">Product</a></li>
             <li><a class="nav-item" href="#vision">Vision</a></li>
             <li><a class="nav-item" href="#features">Features</a></li>
